--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
+
+[Makefile]
+indent_style = tab
